--- a/internetsecurity/index.html
+++ b/internetsecurity/index.html
@@ -88,6 +88,15 @@
 
         </div>
     </main>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-N18REH3CKH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-N18REH3CKH');
+</script>
     <script src="index.js"></script>
 </body>
 </body>
