--- a/internetsecurity/Kids/index.html
+++ b/internetsecurity/Kids/index.html
@@ -88,14 +88,7 @@
 
         </div>
     </main>
-    <div id="qoo-counter">
-<a href="http://askm.me/" title="Бесплатный счетчик посещений на сайт">
-<img src="http://askm.me/counter/small/009s.png" alt="Счетчик посещаемости и статистика сайта">
-<div id="qoo-counter-visits"></div>
-<div id="qoo-counter-views" style="display:none;"></div>
-</a>
-</div>
-<script type="text/javascript" src="http://askm.me/counter.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </body>
 </html>
