--- a/internetsecurity/Kids/index.html
+++ b/internetsecurity/Kids/index.html
@@ -4,6 +4,15 @@
   <meta charset="utf-8" />
   <title></title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GKDE9591K8"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GKDE9591K8');
+</script>
 </head>
 <body>
 <body onload="NextQuestion(0)">
