--- a/internetsecurity/index.html
+++ b/internetsecurity/index.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8" />
   <title></title>
   <link rel="stylesheet" href="style.css" />
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-N18REH3CKH"></script>
-<script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKJK65NXSE"></script>
+  <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-N18REH3CKH');
-</script>
+  gtag('config', 'G-JKJK65NXSE');
+  </script>
 </head>
 <body>
 <body onload="NextQuestion(0)">
