--- a/internetsecurity/Adults/index.html
+++ b/internetsecurity/Adults/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="ru">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MKETBEH04T"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MKETBEH04T');
+  </script>
   <meta charset="utf-8" />
   <title></title>
   <link rel="stylesheet" href="style.css" />
